Fix alignment issues and change color palette header nav

--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -28,6 +28,7 @@ nav {
 
 nav > a {
   text-decoration: none;
+  color: #00bfff;
 }
 
 h1, h2 {
