--- a/src/styles/ShoppingCartIcon.module.css
+++ b/src/styles/ShoppingCartIcon.module.css
@@ -6,13 +6,15 @@
     border: 1px solid black;
     border-radius: 30px;
     box-shadow: 1px 1px 1px gray;
+    align-items: center;
 }
 
 .circle {
     position: absolute;
     top: -4px;
     left: 24px;
-    color: #02a08f;
+    /* color: #02a08f; */
+    color: #00bfff;
 }
 
 .nrOfItemsInBasket {
